deploy/develop/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
spec:
  selector:
    matchLabels:
      service: ${SERVICE_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        service: ${SERVICE_NAME}
      annotations:
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: ${SERVICE_NAME}
          image: ${IMAGE}
          ports:
            - containerPort: ${CONTAINER_PORT}
          #volumeMounts:
          #  - name: ${SERVICE_NAME}
          #    mountPath: /usr/share/nginx/html/${SERVICE_PATH}/goOauth/configSSO.js
          #    subPath: configSSO.js
      nodeSelector:
      imagePullSecrets:
        - name: registry
      restartPolicy: Always
      #volumes:
      #  - name: ${SERVICE_NAME}
      #    configMap:
      #      name: ${SERVICE_NAME}
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
spec:
  ports:
    - port: ${CONTAINER_PORT}
      protocol: TCP
  selector:
    service: ${SERVICE_NAME}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: apisix
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: ${SERVICE_PATH}
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: ${CONTAINER_PORT}
